log/HamamatsuApp_log_181130_163938.txt
2018-11-30T16:39:38|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 51, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 18, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 26, in setup
    from CameraHardware import HamamatsuHardware
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraHardware.py", line 8, in <module>
    import CameraDevice
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraDevice.py", line 648
    if self.camera_model
                       ^
SyntaxError: invalid syntax

